[package]
name = "denosh"
version = "0.1.0"
edition = "2021"

[lib]
name = "denosh"
path = "src/lib.rs"


[dependencies]
eyre = { version = "0.6.12" }
serde = { version = "1" }
serde_json = { version = "1" }
tracing = { version = "0.1" }
dotenv = { version = "*" }
thiserror = { version = "1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.36.0", features = [
  "full",
  "sync",
  "time",
  "macros",
  "rt-multi-thread",
] }
deno_core = "0.292.0"
